solved small alignment issues

--- a/style.css
+++ b/style.css
@@ -1,16 +1,32 @@
+
+body{
+    background-color: rgb(177, 177, 177);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+button{
+    padding: 3px 15px;
+    margin:  10px 15px;
+    border: solid black 2px;
+}
+
 .container{
-    /* align-items: center; */
-    /* justify-content: center; */
+    padding: 10px;
+    margin: 10px;
+    border: solid rgb(134, 134, 134) 3px;
+    background-color: #dedede;
     width: 500px;
     display: flex;
     flex-wrap: wrap;
-    gap:0px;
+    align-items: center;
+    justify-content: center;
 }
 
 .container div{
 box-sizing: border-box;
-/* background-color: #01b5fc; */
-/* background-color: aqua; */
-border: solid #363636 1px;
+border: solid #dad8d8 3px;
 }
 
